--- a/service/static/css/login_style.css
+++ b/service/static/css/login_style.css
@@ -25,14 +25,36 @@ img{max-width:100%;}
 /*end reset*/
 /*--login start here--*/
 body{
-   background: url(../images/banner.jpg)repeat;
-   padding:100px 0px 30px 0px;
-   font-family: 'Roboto', sans-serif;
-   font-size: 100%;
+   background:  transparent;   
 }
+
+.mask{
+  margin:0;
+  padding:0;
+  border:none;
+  width:100%;
+  height:100%;
+  background:#333;
+  opacity:0.6;
+  filter:alpha(opacity=60);
+  z-index:9999;
+  position:fixed;
+  top:0;
+  left:0;
+  display:none;
+}
+
 .login {
-  width: 32%;
-  margin: 0 auto;
+  float: left;
+  width: 400px;
+  position: absolute;
+  margin-left: -200px;
+  margin-top: -300px;
+  top: 50%;
+  left: 50%;
+  background: transparent;
+  font-family: 'Roboto', sans-serif;
+  font-size: 100%;
 }
 .login h2 {
   font-size: 30px;
